Update issue templates

--- a/.github/ISSUE_TEMPLATE/✏️-문제-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/✏️-문제-이슈-템플릿.md
@@ -7,7 +7,7 @@ assignees: ''
 
 ---
 
-<-- 해당 템플릿은 예시입니다! 자유로운 형식으로 변경해도 괜찮습니다! -->
+<!-- 해당 템플릿은 예시입니다! 자유로운 형식으로 변경해도 괜찮습니다! -->
 ## Q1. 1번 문제
 ```
 ```
